# fmea-mcp

./: LICENSE  README.md  chat.md  example_fmea.csv  pyproject.toml
src/fmea_mcp/: __init__.py  neo4j_service.py  server.py
